--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,4 +11,5 @@
 // Block imports
 @import "../blocks/common/page/page.scss";
 @import "../blocks/header/header.scss";
+@import "../blocks/program/program.scss";
 @import "../../node_modules/bootstrap/scss/bootstrap-grid.scss";
