--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -4,8 +4,10 @@ extends ../layouts/base.pug
 //- TODO: add code here
 
 include ../../blocks/header/header.pug
+include ../../blocks/program/program.pug
 //- include ../blocks/cards/_cards.pug
 
 block page
     //- TODO: add code here
     +header
+    +program
