--- a/src/blocks/program/program.pug
+++ b/src/blocks/program/program.pug
@@ -28,7 +28,7 @@ mixin program(props = {})
                 .col-4
                     fieldset.program__wrapper
                         legend.bg 
-                            img.program__img(src="./assets/img/finanse.svg", alt="")
+                            img.program__img(src="./assets/img/megaphon.svg", alt="")
                         h2.program__subtitle Маркетинг
                         hr.line
                         p.text Рынок, ассортимент, ценовые стратегии
@@ -37,7 +37,7 @@ mixin program(props = {})
                 .col-4
                     fieldset.program__wrapper
                         legend.bg
-                            img.program__img(src="./assets/img/finanse.svg", alt="")
+                            img.program__img(src="./assets/img/idea2.svg", alt="")
                         h2.program__subtitle Стратегии
                         hr.line
                         p.text Рентабельность активов, продаж, инвестиций
@@ -45,7 +45,7 @@ mixin program(props = {})
                 .col-4
                     fieldset.program__wrapper
                         legend.bg 
-                            img.program__img(src="./assets/img/finanse.svg", alt="")
+                            img.program__img(src="./assets/img/analitic.svg", alt="")
                         h2.program__subtitle Планирование
                         hr.line
                         p.text Структура, мотивация, бюджет
@@ -53,7 +53,7 @@ mixin program(props = {})
                 .col-4
                     fieldset.program__wrapper
                         legend.bg
-                            img.program__img(src="./assets/img/finanse.svg", alt="")
+                            img.program__img(src="./assets/img/metrics.svg", alt="")
                         h2.program__subtitle Метрики
                         hr.line
                         p.text Управленческий радар
