--- a/src/blocks/program/program.scss
+++ b/src/blocks/program/program.scss
@@ -90,9 +90,11 @@
         height: 55px;
         border: 1px solid #323134;
         // box-sizing: border-box;
+        margin-bottom: 74px;
     }
 
     &__background-button {
+        
         padding-left: 30px;
         position: absolute;
         z-index: 1;
