--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -5,9 +5,11 @@ extends ../layouts/base.pug
 
 include ../../blocks/header/header.pug
 include ../../blocks/program/program.pug
+include ../../blocks/konsalting/konsalting.pug
 //- include ../blocks/cards/_cards.pug
 
 block page
     //- TODO: add code here
     +header
     +program
+    +konsalting
