--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,4 +12,5 @@
 @import "../blocks/common/page/page.scss";
 @import "../blocks/header/header.scss";
 @import "../blocks/program/program.scss";
+@import "../blocks/konsalting/konsalting.scss";
 @import "../../node_modules/bootstrap/scss/bootstrap-grid.scss";
