--- a/src/blocks/konsalting/konsalting.pug
+++ b/src/blocks/konsalting/konsalting.pug
@@ -14,10 +14,29 @@ mixin konsalting(props = {})
                     .col-1
                         td
                             tr
-                                img
+                                img.konsalting__img(src="./assets/img/focus.svg", alt="")
                             tr
-                                img
+                                img.konsalting__img(src="./assets/img/analiz.svg", alt="")
                             tr
-                                img
+                                img.konsalting__img(src="./assets/img/settings.svg", alt="")
                             tr
-                                img
+                                img.konsalting__img(src="./assets/img/browser.svg", alt="")
+                    .col-6.column
+                        td
+                            tr
+                                p.konsalting__text Фокус на рост прибыли и доли рынка
+                            tr
+                                img.konsalting__img-plus(src="./assets/img/plus.svg", alt="")
+                                p.konsalting__text Исследования  и системный анализ
+                            tr
+                                img.konsalting__img-plus(src="./assets/img/plus.svg", alt="")
+                                p.konsalting__text Международные технологии и глобальный опыт
+                            tr
+                                img.konsalting__img-plus(src="./assets/img/plus.svg", alt="")
+                                p.konsalting__text Готовые к использованию управленческие решения
+                    .col-1s
+                        img.konsalting__img-equally(src="./assets/img/equally.svg", alt="")
+                    .col-4
+                        .konsalting__bg-img
+                            img.konsalting__img-line-chart(src="./assets/img/line-chart.svg", alt="")
+                            p.konsalting__bg-text ЦЕННОСТЬ ДЛЯ РОСТА КОМПАНИИ
