--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -6,6 +6,7 @@ extends ../layouts/base.pug
 include ../../blocks/header/header.pug
 include ../../blocks/program/program.pug
 include ../../blocks/konsalting/konsalting.pug
+include ../../blocks/about/about.pug
 //- include ../blocks/cards/_cards.pug
 
 block page
@@ -13,3 +14,4 @@ block page
     +header
     +program
     +konsalting
+    +about
