--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -13,4 +13,5 @@
 @import "../blocks/header/header.scss";
 @import "../blocks/program/program.scss";
 @import "../blocks/konsalting/konsalting.scss";
+@import "../blocks/about/about.scss";
 @import "../../node_modules/bootstrap/scss/bootstrap-grid.scss";
