--- a/src/blocks/konsalting/konsalting.scss
+++ b/src/blocks/konsalting/konsalting.scss
@@ -14,13 +14,8 @@
 
     &__wrapper {
         height: 100%;
-        background-image: url(../img/konsalting-bg.png);
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: cover;
         width: 100%;
-        margin: 0 auto;
-        opacity: 0.88;
+        background-color: rgba(39, 38, 42, 0.88);
     }
 
     &__title {
@@ -40,6 +35,53 @@
         line-height: 24px;
         text-transform: uppercase;
         color: #FFFFFF;
+    }
+
+    &__img {
+        margin-top: 53px;
+        margin-left: 20px;
+    }
+
+    &__img-plus {
+        margin-top: 60px;
+    }
+
+    &__text {
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+        color: #FFFFFF;
+    }
+    &__img-equally {
+        margin-top: 225px;
+    }
+
+    &__bg-img {
+        height: 357px;
+        width: 357px;
+        border-radius: 50%;
+        box-sizing: border-box;
+        margin-top: 45px;
+        margin-left: 50px;
+        padding-top: 46px;
+        text-align: center;
+        background: #FB7710;
+    }
+
+    &__bg-text {
+        font-size: 30px;
+        line-height: 35px;
+        font-weight: 600;
+        text-align: center;
+        color: #FFFFFF;
+        padding-left: 60px;
+        padding-right: 60px;
+        padding-top: 22px;
+    }
+
+    .column {
+        margin-top: 70px;
     }
     // @media queries
     // TODO: add code
